forside kodning igen

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Dette er et informativt website til TrøjborgBryg som sælger alkoholfriøl med fokus på
   autencitet, kvalitet, innovation og sundhed">
+  <script src="script.js" defer></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Georama:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -36,7 +37,7 @@
 
     <div class="forside">
         <div id="venstre_forside">
-            <img src="img/Greta.jpg" alt="">
+            <img name="slide" width="800" height="800">
         </div>
         <div id="hojre_forside">
             <h1>VOLUME VILLAGE</h1>
@@ -47,6 +48,39 @@
             </div>
         </div>
     </div>
+
+    <div id="forsidescroll">
+        <img src="img/VVlillelogo.png" alt="">
+    </div>
+
+    <div class="forside" id="event_slider">
+        <div id="venstre_opdag">
+            <img src="img/crowd.png" alt="">
+        </div>
+        <div id="hojre_opdag">
+            <h1>OPDAG VOLUME VILLAGE</h1>
+            <div>
+                <p>Volume Village er byens kulturelle vækstlagsplatform.
+                    Et multifunktionelt spillested, rodfæstet i den Aarhusianske vækslagskultur, 
+                    med fokus på urbane, progressive genrer. </p>
+            </div>
+        </div>
+    </div>
+
+    
+    <footer class="footer">
+        <div id="footer_tekst">
+            <div>
+            <p>skjhskhs</p>
+        </div>
+        <div><p>djnkjdk</p>
+        </div>
+    </div>
+        <div id="footer_VV">
+            <h1>VOLUME VILLAGE</h1>
+        </div>
+    </footer>
+
     <script>
         // JavaScript to toggle the visibility of the submenu when clicking on Services
         document.getElementById("servicesBtn").addEventListener("click", function() {
