--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
         </div>
     </div>
 
+    <div class="logo">
+        <img src="img/forside/logo_nav.png" alt="VV Logo">
+    </div>
+
     <div class="forside">
         <div id="venstre_forside">
             <img name="slide" width="800" height="800">
@@ -90,4 +94,3 @@
 
 </body>
 </html>
-divjfoidsfnkdfjkndnsdv 
