arrangementer og events

--- a/arrangementer.html
+++ b/arrangementer.html
@@ -65,6 +65,7 @@
         <div class="text">LØR 11. MAJ KL. 12:30-02:00</div>
         <div class="title">PALVISION 2024</div>
         <div class="button">LÆS MERE</div>
+        <a href="#" class="buy-button">KØB BILLET</a>
       </div>
 
       <div class="box-container">
@@ -72,6 +73,7 @@
         <div class="text">FRE 16. MAJ KL. 19:00-23:00</div>
         <div class="title">TALK: EP X MENNESKERET -HVORFOR GØR DIN STEMME EN FORSKEL?</div>
         <div class="button">LÆS MERE</div>
+        <a href="#" class="buy-button">KØB BILLET</a>
       </div>
 
       <div class="box-container">
@@ -79,6 +81,7 @@
         <div class="text">ONS 19. JUN KL. 17:00-19:00</div>
         <div class="title">AARHUS LYDFORENING: Are you interested in live sound engineering?</div>
         <div class="button">LÆS MERE</div>
+        <a href="#" class="buy-button">KØB BILLET</a>
       </div>
 
       <div class="box-container">
@@ -86,6 +89,7 @@
         <div class="text">TORS 27. JUN KL. 10:00-15:00</div>
         <div class="title">LOPPEMARKED UNDER BROEN</div>
         <div class="button">LÆS MERE</div>
+        <a href="#" class="buy-button">KØB BILLET</a>
       </div>
 
       <div class="box-container">
@@ -93,6 +97,7 @@
         <div class="text">TORS 4. JUL KL. 19:00 - 23:00</div>
         <div class="title">PITCH LIVE</div>
         <div class="button">LÆS MERE</div>
+        <a href="#" class="buy-button">KØB BILLET</a>
       </div>
 
       <div class="box-container">
@@ -100,6 +105,7 @@
         <div class="text">TIR 9. JUL KL. 16:00 - 22:00</div>
         <div class="title">KALAS - Kun adgang hvis du er mellem 13-17 år!</div>
         <div class="button">LÆS MERE</div>
+        <a href="#" class="buy-button">KØB BILLET</a>
       </div>
 
     </body>
