--- a/events.html
+++ b/events.html
@@ -37,7 +37,7 @@
             <img src="img/forside/logo_nav.png" alt="VV Logo">
         </div>
         <div id="overskrift_arrangementer">
-            <h1>ARRANGEMENTER</h1>
+            <h1>EVENTS</h1>
         </div>
         div class="dropdown">
         <button class="dropdown-btn">GENRE</button>
@@ -61,45 +61,51 @@
       </div>
 
       <div class="box-container">
-        <img src="img/palvision.jpeg" alt="Billede" class="box-image">
-        <div class="text">LØR 11. MAJ KL. 12:30-02:00</div>
-        <div class="title">PALVISION 2024</div>
+        <img src="img/LEA.png" alt="Billede" class="box-image">
+        <div class="text">FRE 17. MAJ KL. 19:00-23:00</div>
+        <div class="title">LEA EYÐBJØRG | EP RELEASE-KONCERT + SUPPORT: STEPHANIE MEINCKE</div>
         <div class="button">LÆS MERE</div>
+        <a href="#" class="buy-button">KØB BILLET</a>
       </div>
 
       <div class="box-container">
-        <img src="img/EP mennesket.webp" alt="Billede" class="box-image">
-        <div class="text">FRE 16. MAJ KL. 19:00-23:00</div>
-        <div class="title">TALK: EP X MENNESKERET -HVORFOR GØR DIN STEMME EN FORSKEL?</div>
+        <img src="img/event 2.webp" alt="Billede" class="box-image">
+        <div class="text">FRE 24. MAJ KL. 18:00-23:00</div>
+        <div class="title">KLUMBEN & RASKE PENGE: BROHAVEN</div>
         <div class="button">LÆS MERE</div>
+        <a href="#" class="buy-button">KØB BILLET</a>
       </div>
 
       <div class="box-container">
-        <img src="img/426661334_17972300090663505_6366243141553690715_n.jpg" alt="Billede" class="box-image">
-        <div class="text">ONS 19. JUN KL. 17:00-19:00</div>
-        <div class="title">AARHUS LYDFORENING: Are you interested in live sound engineering?</div>
+        <img src="img/kaleido.jpeg" alt="Billede" class="box-image">
+        <div class="text">FRE 21. JUN KL. 16:00 - LØR 22.JUNI KL.23:59</div>
+        <div class="title">KALEIDO</div>
         <div class="button">LÆS MERE</div>
+        <a href="#" class="buy-button">KØB BILLET</a>
       </div>
 
       <div class="box-container">
-        <img src="img/Skærmbillede 2024-05-10 kl. 09.16.04.png" alt="Billede" class="box-image">
-        <div class="text">TORS 27. JUN KL. 10:00-15:00</div>
-        <div class="title">LOPPEMARKED UNDER BROEN</div>
+        <img src="img/event 3.webp" alt="Billede" class="box-image">
+        <div class="text">LØR 29. JUN KL. 22:00-05:00</div>
+        <div class="title">PROJEKT:TECHNO TÆKØVER VOL. 4</div>
         <div class="button">LÆS MERE</div>
+        <a href="#" class="buy-button">KØB BILLET</a>
       </div>
 
       <div class="box-container">
-        <img src="img/Skærmbillede 2024-05-10 kl. 09.23.35.png" alt="Billede" class="box-image">
-        <div class="text">TORS 4. JUL KL. 19:00 - 23:00</div>
-        <div class="title">PITCH LIVE</div>
+        <img src="img/event 2.webp" alt="Billede" class="box-image">
+        <div class="text">TORS 29. AUG KL. 19:00 - 23:30</div>
+        <div class="title">KIND MOD KIND: BROHAVEN</div>
         <div class="button">LÆS MERE</div>
+        <a href="#" class="buy-button">KØB BILLET</a>
       </div>
 
       <div class="box-container">
-        <img src="img/Skærmbillede 2024-05-10 kl. 09.31.44.png" alt="Billede" class="box-image">
-        <div class="text">TIR 9. JUL KL. 16:00 - 22:00</div>
-        <div class="title">KALAS - Kun adgang hvis du er mellem 13-17 år!</div>
+        <img src="img/billde.webp" alt="Billede" class="box-image">
+        <div class="text">FRE 20. SEP KL. 19:00 - 23:00</div>
+        <div class="title">ASTRID ENGBERG</div>
         <div class="button">LÆS MERE</div>
+        <a href="#" class="buy-button">KØB BILLET</a>
       </div>
 
     </body>
