--- a/club+venue.html
+++ b/club+venue.html
@@ -17,11 +17,11 @@
 
 <body>
     
-    <div class="forside">
-        <div id="venstre_forside">
+    <div class="forside_grid">
+        <div id="venstre_vv">
             <img src="img/vvclub.png" alt="">
             </div> 
-        <div id="hojre_forside">
+        <div id="hojre_vv">
             <div>
             <img src="img/vvvenue.png" alt="">
             </div>
