--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <img src="img/forside/logo_nav.png" alt="VV Logo">
     </div>
 
-    <div class="forside">
+    <div class="forside_grid">
         <div id="venstre_forside">
             <img name="slide" width="800" height="800">
         </div>
@@ -51,11 +51,32 @@
         </div>
     </div>
 
-    <div id="forsidescroll">
+    <div id="forside_scroll">
         <img src="img/VVlillelogo.png" alt="">
     </div>
 
-    <div class="forside" id="event_slider">
+    <div id="upcomming">
+        <h1>UPCOMMING EVENTS</h1>
+    </div>
+
+    <div class="slider">
+        <div class="slides" id="tekst_slider">
+            <div class="upcomming_slide">
+                <img src="img/image_slider/lea.avif" alt="image #1">
+                <p>FRE 17. maj // 19:00-23:00</p>
+                <h2>Lea Eyóbjørg</h2>
+            </div>
+            <img class="upcomming_slide" src="img/image_slider/lea.avif" alt="image #1">
+            <img class="upcomming_slide" src="img/image_slider/omar.png" alt="image #2">
+            <img class="upcomming_slide" src="img/image_slider/astrid.jpg" alt="image #3">
+            <img class="upcomming_slide" src="img/image_slider/brohaven.jpg" alt="image #4">
+            <img class="upcomming_slide" src="img/image_slider/alexander.png" alt="image #5">
+        </div>
+        <button class="prev" onclick="nextUpcomming_slide()">&#10094</button>
+        <button class="next" onclick="nextUpcomming_slide()">&#10095</button>
+    </div>
+
+    <div class="forside_grid" id="forside_opdag">
         <div id="venstre_opdag">
             <img src="img/forside/crowd.png" alt="">
         </div>
