--- a/astridevent.html
+++ b/astridevent.html
@@ -40,11 +40,13 @@
         <h1>ASTRID ENGBERG | SANGERINDE, DJ, KOMPONIST & PRDOUCER</h1>
     </div>
 
-    <div class="image-container">
-        <img src="img/billde.webp" alt="Astrid Image" class="astrid-img">
-        <div class="event-box">
-            <!-- Content goes here -->
-        </div>
+    <img src="img/billde.webp" alt="Astrid Image" class="astrid-img">
+    <div class="event-box">
+       
+    </div>
+
+    <div class="spotify-player">
+        <iframe style="border-radius:10px" src="https://open.spotify.com/embed/artist/1aCZzByicOHcS6WpNPwqXV?utm_source=generator&theme=0" width="496" height="390" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
     </div>
 
 
