--- a/club+venue.html
+++ b/club+venue.html
@@ -16,16 +16,12 @@
 </head>
 
 <body>
-    
     <div class="forside_grid">
-        <div id="venstre_vv">
-            <img src="img/vvclub.png" alt="">
-            </div> 
-        <div id="hojre_vv">
-            <div>
+        <div id="venstre_clubvenue" class="play-on-hover">
+            <div class="text">Your Text Here asdasda</div>
+        </div>
+        <div id="hojre_clubvenue">
             <img src="img/vvvenue.png" alt="">
-            </div>
         </div>
     </div>
-
 </body>
