--- a/astridevent.html
+++ b/astridevent.html
@@ -43,7 +43,8 @@
     <img src="img/billde.webp" alt="Astrid Image" class="astrid-img">
     <div class="event-box">
         <h1>Astrid Engberg</h1>
-        <p>Volume Village – Thomas Koppels Gade 201, 8000 Aarhus C</p>
+        <p class="address">Volume Village – Thomas Koppels Gade 201, 8000 Aarhus C</p>
+        <hr class="divider">
         <p><strong>Fredag</strong><br>20. sep kl. 19:00 - 23:00</p>
         <p><strong>Pris inkl. gebyr</strong><br>190,-</p>
         <p>
