--- a/astridevent.html
+++ b/astridevent.html
@@ -45,19 +45,32 @@
         <h1>Astrid Engberg</h1>
         <p class="address">Volume Village – Thomas Koppels Gade 201, 8000 Aarhus C</p>
         <hr class="divider">
-        <p><strong>Fredag</strong><br>20. sep kl. 19:00 - 23:00</p>
-        <p><strong>Pris inkl. gebyr</strong><br>190,-</p>
+
+        <div class="date-price">
+            <div class="date">
+                <p><strong>FREDAG</strong><br>20. sep kl. 19:00 - 23:00</p>
+            </div>
+            <div class="price">
+                <p><strong>PRIS INKL. GEBYR</strong><br>190,-</p>
+            </div>
+        </div>
+        <hr class="divider">
+
         <p>
             Den danske sangerinde, producer, komponist og DJ Astrid Engberg, København, udgav i september 2023 sit andet album Trust.<br><br>
             Astrid Engbergs musik spænder over moderne soul, R&B, nu jazz og moderne klassisk musik, og lytteren inviteres ind i et univers af både minimalistiske og tunge produktioner, personlige historier og spirituel søgen. En fortryllende stemme, der udtrykker både en oprigtig følsomhed og dyb styrke.
         </p>
+
         <div class="ticket-box">
             <button>-</button>
             <span>0</span>
             <button>+</button>
-            <button>Tilføj til kurven</button>
         </div>
+        <button class="add-to-cart">TILFØJ TIL KURVEN</button>
     </div>
+    
+
+       
 
     <div class="spotify-player">
         <iframe style="border-radius:10px" src="https://open.spotify.com/embed/artist/1aCZzByicOHcS6WpNPwqXV?utm_source=generator&theme=0" width="496" height="360" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
