inde på event update

--- a/astridevent.html
+++ b/astridevent.html
@@ -70,14 +70,31 @@
     </div>
     
 
-       
-
     <div class="spotify-player">
         <iframe style="border-radius:10px" src="https://open.spotify.com/embed/artist/1aCZzByicOHcS6WpNPwqXV?utm_source=generator&theme=0" width="496" height="360" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
     </div>
 
-    <div class="eventto-box"></div>
-
+    <div class="eventto-box">
+        <div class="details-section">
+            <h2 class="section-title">DETALJER</h2>
+            <div class="section-text">
+                <p>Forsalg: 100 kr. (+gebyr)</p>
+                <p>Dørsalg: 125 kr. (+gebyr)</p>
+                <p>Døre åbner: 19:00</p>
+                <p>Support: 20:00</p>
+            </div>
+        </div>
+        <div class="location-section">
+            <h2 class="section-title">STED</h2>
+            <div class="section-text">
+                <p>Volume Village</p>
+                <p>Thomas Koppels Gade 201, Aarhus C 8000</p>
+                <p>Telefon: +45 41606076</p>
+                <p>E-mail: kontakt@volumevillage.dk</p>
+            </div>
+        </div>
     </div>
+
+   
 
 
