--- a/club+venue.html
+++ b/club+venue.html
@@ -18,10 +18,20 @@
 <body>
     <div class="forside_grid">
         <div id="venstre_clubvenue" class="play-on-hover">
-            <div class="text">Your Text Here asdasda</div>
+            <div class="tekst_clubvenue top">
+                <p>Bar & Natklub</p>
+            </div>
+            <div class="tekst_clubvenue bottom">
+                <p>Natklub. Bar. Musik. Events.</p>
+            </div>
         </div>
-        <div id="hojre_clubvenue">
-            <img src="img/vvvenue.png" alt="">
+        <div id="hojre_clubvenue" class="play-on-hover-right">
+            <div class="tekst_clubvenue top">
+                <p>Arrangementer</p>
+            </div>
+            <div class="tekst_clubvenue bottom">
+                <p>Workshops. Masterclasses. Konferencer. Hygge.</p>
+            </div>
         </div>
     </div>
 </body>
