--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
     <div class="slider">
         <div class="slides" id="tekst_slider">
-            <div class="upcomming_slide">
+            <div class="upcomming_slide" id="tekst_slider">
                 <img src="img/image_slider/lea.avif" alt="image #1">
                 <p>FRE 17. maj // 19:00-23:00</p>
                 <h2>Lea Eyóbjørg</h2>
