--- a/events.html
+++ b/events.html
@@ -56,10 +56,19 @@
           <a href="#">Januar</a>
           <a href="#">Februar</a>
           <a href="#">Marts</a>
+          <a href="#">April</a>
+          <a href="#">Maj</a>
+          <a href="#">Juni</a>
+          <a href="#">Juli</a>
+          <a href="#">August</a>
+          <a href="#">September</a>
+          <a href="#">Oktober</a>
+          <a href="#">November</a>
+          <a href="#">December</a>
           
         </div>
       </div>
-
+      <div class="grid-container">
       <div class="box-container">
         <img src="img/LEA.png" alt="Billede" class="box-image">
         <div class="text">FRE 17. MAJ KL. 19:00-23:00</div>
@@ -107,6 +116,7 @@
         <div class="button">LÆS MERE</div>
         <a href="#" class="buy-button">KØB BILLET</a>
       </div>
+    </div>
 
     </body>
     
